changes made in the past. New beginning.

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -22,7 +22,7 @@
             <select name="project">
                 <option name='twitter4j'>twitter4j</option>
                 <option name='broadleaf'>broadleaf</option>
-                <!--option name='gradle'>gradle</option-->
+                <option name='gradle'>gradle</option>
                 <option name='antlr4'>antlr4</option>
             </select>
             <label>Date From:</label>
