--- a/website/templates/pairwise_conflict_dataset/project_detail.html
+++ b/website/templates/pairwise_conflict_dataset/project_detail.html
@@ -56,10 +56,10 @@
                         {
                             type: 'time',
                             time: {
-                                unit: 'day',
+                                unit: 'month',
                                 round: 'day',
                                 displayFormats: {
-                                    day: 'MMM D',
+                                    month: 'MMM YYYY',
                                 },
                             },
                         },
@@ -135,6 +135,7 @@
     <span><b>First PR date: </b></span> {{ first_pr_date }} <br>
     <span><b>Last PR date: </b></span> {{ last_pr_date }} <br>
     <h3>Merged Pull Requests Chart</h3>
+    <p>This chart shows the merged PRs per day. This information is useful to have a quick view of the distribution of merges over time. In this way, we can easily know when there was more or less merge activity in the project.</p>
     <div style="width: 100%;">
         <canvas style="margin-bottom: 30px; width: 60%; height: 50%;" id="pullRequestChart"></canvas>
     </div>
@@ -142,11 +143,32 @@
     <span><b># Pairwise Conflicts: </b></span> {{ pc_number }} <br>
     <span><b>First Pairwise Conflicts date: </b></span> {{ first_pc_date }} <br>
     <span><b>Last Pairwise Conflicts date: </b></span> {{ last_pc_date }} <br>
-    <h3>Pairwise Conflict Chart</h3>
+    <p>if the number of pairwise conflicts is zero our proposal does not report any value. As the number of pairwise conflicts is larger, our proposal may be more useful.</p>
+    <!--h3>Pairwise Conflict Chart</h3>
     <div style="width: 100%;">
         <canvas style="margin-bottom: 30px; width: 60%; height: 50%;" id="pairwiseConflictChart"></canvas>
-    </div>
+    </div-->
     <h2>Time Windows</h2>
+    <table>
+        {% for row in tws_comparison_table %}
+            <tr>
+                {% if forloop.first %}
+                    {% for col in row %}
+                        <td><b>{{ col }}</b></td>
+                    {% endfor %}
+                {% else %}
+                    {% for col in row %}
+                        {% if forloop.first %}
+                            <td><b>{{ col }}</b></td>
+                        {% else %}
+                            <td>{{ col }}</td>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+
+            </tr>
+        {% endfor %}
+    </table>
     {% for tw_ipe_stats in tws_ipe_stats %}
         <h3>{{ tw_ipe_stats.tw_size }}-days time windows <span id="button_{{ tw_ipe_stats.tw_size }}" onclick="toggle({{ tw_ipe_stats.tw_size }})">+</span></h3>
         <div id="tw_{{ tw_ipe_stats.tw_size }}_days" style="display: none">
@@ -157,24 +179,24 @@
             <span><b># Time Windows that improve historical IPE: </b></span> {{ tw_ipe_stats.tw_improves_ipe_quantity }} <br>
             <span><b># Time Windows that not improve historical IPE: </b></span> {{ tw_ipe_stats.tw_not_improves_ipe_quantity }} <br>
             <span><b># Time Windows equal historical IPE: </b></span> {{ tw_ipe_stats.tw_equal_ipe_quantity }} <br>
-            {% if tw_ipe_stats.tw_without_pc_quantity > 0 %}
+            <!--{% if tw_ipe_stats.tw_without_pc_quantity > 0 %}
                 <h4>Time Windows without pairwise conflicts histogram</h4>
                 <div>
                     <img src="{{ tw_ipe_stats.hist_tw_without_pc.url }}" alt="PR number hist">
                 </div>
-            {% endif %}
+            {% endif %}-->
             {% if tw_ipe_stats.tw_with_pc_quantity > 0 %}
-                <h4>Time Windows with pairwise conflicts histogram</h4>
+                <!--h4>Time Windows with pairwise conflicts histogram</h4>
                 <div>
                     <img width="60%" src="{{ tw_ipe_stats.hist_tw_with_pc.url }}" alt="hist">
-                </div>
+                </div-->
                 <h4>Time Windows with pairwise conflicts. Descriptive statistics</h4>
                 {{ tw_ipe_stats.tw_with_pc_stats.to_html | safe }}
                 <h4>Correlation Matrix</h4>
                 <div>
-                    <img width="60%" src="{{ tw_ipe_stats.corr_matrix_tw_with_pc.url }}" alt="Correlation Matrix">
+                    <img width="70%" src="{{ tw_ipe_stats.corr_matrix_tw_with_pc.url }}" alt="Correlation Matrix">
                 </div>
-                <h4>Conflict Resolutions Boxplot</h4>
+                <h4>Conflict Resolutions</h4>
                 <div>
                     <img width="60%" src="{{ tw_ipe_stats.boxplot_conflict_resolutions_tw_with_pc.url }}" alt="Correlation Matrix">
                 </div>
